# alphasift

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
alphasift/: __init__.py  akshare_boards.py  audit.py  board_flow.py  candidate_context.py  cli.py  config.py  daily.py  daily_adjust.py  daily_indicators.py  daily_store.py  daily_sync.py  data_update.py  doctor.py  dsa_adapter.py  dsa_provider.py  evaluate.py  filter.py  flow.py  flow_conditions.py  flow_metrics.py  flow_specs.py  flow_store.py  flow_sync.py  hotspot.py  industry.py  local_parquet_io.py  models.py  overview.py  performance_history.py  pipeline.py  ranker.py  report.py  result_schema.py  risk.py  run_history.py  scorer.py  screen_prerequisites.py  server.py  snapshot.py  (+6 more)
docs/: CHANGELOG.md  board-flow-guide.md  comparison.md  configuration.md  reference.md  result-schema.md  scoring.md  strategy-guide.md  usage.md
strategies/: b1_above_long.yaml  b1_main_inflow_5d.yaml  b1_main_inflow_5d_no_divergence.yaml  b1_perfect.yaml  b2_main_inflow_5d.yaml  balanced_alpha.yaml  brick_turn_up.yaml  main_inflow_momentum.yaml  quality_value.yaml  shrink_pullback.yaml  volume_breakout.yaml
tests/: test_akshare_boards.py  test_audit.py  test_board_flow.py  test_cli.py  test_config_flow.py  test_daily.py  test_daily_indicators_zg.py  test_daily_store.py  test_daily_sync.py  test_data_update.py  test_doctor.py  test_dsa_adapter.py  test_filter.py  test_filter_zg.py  test_flow_metrics.py  test_flow_store.py  test_flow_sync.py  test_overview.py  test_pattern_metrics.py  test_pattern_search.py  (+20 more)
(+17 files in other folders)
